# fastest-ternary-resnet-inference

./: CMakeLists.txt  DOCUMENTATION.md  engine.cpp  engine.h  export_trn3_engine.py  flow.md  inference_main.cpp  result  train_ternary_engine.py
